# JM-cpp-examples

./: .gitignore  README.md
.github/workflows/: build-examples.yaml
slint-gui-application/: CMakeLists.txt
slint-gui-application/src/: main.cpp  utils.cpp  utils.hpp
slint-gui-application/src/application/: app.cpp  app.hpp  defs.hpp  main.cpp  types.hpp  utils.cpp  utils.hpp
slint-gui-application/src/common/: types.hpp
slint-gui-application/src/comms/: serial_manager.cpp  serial_manager.hpp
slint-gui-application/ui/: app_window.slint  components.slint  configuration.slint  layout.slint  logo_panel.slint  main_panel.slint  primitives.slint  state.slint  theme.slint  version.slint
slint-gui-application/ui/application/: app_window.slint  configuration.slint  index.slint  layout.slint  state.slint  theme.slint  version.slint
slint-gui-application/ui/controls/: controls.slint  d_pad.slint  horizontal_slider.slint  index.slint  vertical_slider.slint
slint-gui-application/ui/menubar/: about_popup.slint  github_dialogue.slint  index.slint  main_menu_bar.slint
slint-gui-application/ui/navigation/: index.slint  navigation.slint  page_enum.slint
slint-gui-application/ui/pages/: home_page.slint  index.slint  pages.slint  splash_page.slint
slint-gui-application/ui/pages/home/: home_page.slint  icon_panel.slint  main_panel.slint  main_tabs.slint
slint-gui-application/ui/pages/splash/: splash_page.slint
slint-gui-application/ui/panels/: about_popup_panel.slint  home_icon_panel.slint  home_main_panel.slint  panels.slint
slint-gui-application/ui/primitives/: d_pad.slint  draggable_area.slint  horizontal_slider.slint  index.slint  primitives.slint  separator.slint  vertical_slider.slint
slint-gui-application/ui/tabs/: home_main_tabs.slint  tabs.slint
